--- a/packages/commitlint-config/package.json
+++ b/packages/commitlint-config/package.json
@@ -1,26 +1,26 @@
 {
   "name": "commitlint-config",
   "version": "0.0.0",
-  "description": "> TODO: description",
+  "description": "> commitlint 文档规范",
   "author": "yangqianjuan <1072483500@qq.com>",
   "homepage": "https://github.com/yangqianjuan/code_standard#readme",
   "license": "ISC",
   "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
+  "keywords": [
+    "commit",
+    "lint"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yangqianjuan/code_standard.git"
+    "url": "git+https://github.com/encode-studio-fe/fe-spec.git"
   },
   "scripts": {
     "test": "node ./__tests__/commitlint-config.test.js"
   },
   "bugs": {
-    "url": "https://github.com/yangqianjuan/code_standard/issues"
+    "url": "https://github.com/encode-studio-fe/fe-spec/issues"
+  },
+  "dependencies": {
+    "conventional-changelog-conventionalcommits": "^4.5.0"
   }
 }
