--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lerna": "^7.3.1",
     "vue": "^3.3.4",
     "vuepress": "2.0.0-beta.67",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "@commitlint/cli": "^17.6.1"
+  },
+  "dependencies": {
+    "conventional-changelog-conventionalcommits": "^4.5.0"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
@@ -17,12 +21,13 @@
     "init": "pnpm install",
     "clean": "lerna clean && rm -rf node_modules",
     "test": "lerna run test",
-    "docs:dev": "vuepress dev doc",
-    "docs:build": "vuepress build doc",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "deploy": "bash deploy.sh",
     "publish": "lerna public",
     "lint": "markdownlint README.md",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "commitlint": "commitlint --edit"
   },
   "publishConfig": {
     "access": "public",
