--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
     "@vuepress/client": "2.0.0-beta.67",
+    "git-cz": "^4.9.0",
+    "husky": "^8.0.3",
     "lerna": "^7.3.1",
     "vue": "^3.3.4",
-    "vuepress": "2.0.0-beta.67",
-    "husky": "^8.0.3",
-    "@commitlint/cli": "^17.6.1"
+    "vuepress": "2.0.0-beta.67"
   },
   "dependencies": {
     "conventional-changelog-conventionalcommits": "^4.5.0"
@@ -32,5 +33,10 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/git-cz"
+    }
   }
 }
