--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@commitlint/cli": "^17.6.1",
+    "@commitlint/cli": "^17.8.0",
+    "@commitlint/config-conventional": "^17.8.0",
     "@vuepress/client": "2.0.0-beta.67",
+    "encode-fe-markdownlint-config": "^1.0.0",
     "git-cz": "^4.9.0",
     "husky": "^8.0.3",
     "lerna": "^7.3.1",
+    "markdownlint": "^0.28.2",
     "vue": "^3.3.4",
     "vuepress": "2.0.0-beta.67"
   },
