--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "deploy": "bash deploy.sh",
-    "publish": "lerna public",
+    "publish": "lerna publish",
     "lint": "markdownlint README.md",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "commitlint": "commitlint --edit"
