--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "workspaces": [
     "packages/*"
   ],
+  "keywords": [
+    "qian",
+    "lint"
+  ],
   "devDependencies": {
-    "@commitlint/cli": "^17.8.0",
-    "@commitlint/config-conventional": "^17.8.0",
-    "@vuepress/client": "2.0.0-beta.67",
-    "encode-fe-markdownlint-config": "^1.0.0",
-    "git-cz": "^4.9.0",
+    "@commitlint/cli": "^17.6.1",
     "husky": "^8.0.3",
-    "lerna": "^7.3.1",
-    "markdownlint": "^0.28.2",
-    "vue": "^3.3.4",
-    "vuepress": "2.0.0-beta.67"
+    "lerna": "^6.6.2",
+    "markdownlint": "^0.28.1",
+    "pnpm": "^8.6.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.5.2",
+    "typedoc": "^0.24.7",
+    "typescript": "^5.0.4",
+    "vue-template-compiler": "^2.7.14",
+    "vuepress": "^1.9.9",
+    "vuepress-plugin-one-click-copy": "^1.0.2",
+    "vuepress-plugin-zooming": "^1.1.7",
+    "@commitlint/config-conventional": "^17.8.0",
+    "git-cz": "^4.9.0"
   },
   "dependencies": {
     "conventional-changelog-conventionalcommits": "^4.5.0"
